--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet" />
   <!-- Main CSS FILE -->
   <link rel="stylesheet" href="css/style.css" />
-  <title>Document</title>
+  <title>Elzero</title>
 </head>
 
 <body>
@@ -827,8 +827,8 @@
         <img src="imgs/gallery-06.png" alt="gallery-6" />
       </div>
     </div>
-    <div class="made">Made With &lt;3 By Mohammad AL-Rahhal <br><span>( Learned From : <a
-          href="https://elzero.org/">Elzero
+    <div class="made">Made With &lt;3 By Mohammad AL-Rahhal <br><span>( Learned From : <a href="https://elzero.org/"
+          target="_blank">Elzero
           Academy</a> )</span></div>
   </footer>
 
